# denvrpy

./: .gitignore  404.html  README.md  index.html  objects.inv  pyproject.toml
.github/workflows/: CI.yml  docs.yml  nightly.yml  release.yml  zizmor.yml
api/: index.html
architecture/: index.html
configuration/: index.html
contributing/: index.html
denvr/: auth.py  client.py  config.py  session.py  validate.py
denvr/api/v1/: clusters.py  vpcs.py
denvr/api/v1/servers/: applications.py  images.py  metal.py  virtual.py
docs/: contributing.md
license/: index.html
scripts/: api.json  apigen.py  client.py.jinja2  test  test_client.py.jinja2
tests/: test_client.py  test_config.py
tests/api/v1/: test_clusters.py  test_vpcs.py
tests/api/v1/servers/: test_applications.py  test_images.py  test_metal.py  test_virtual.py
